Create a working "CrudContactosMVC" project using ASP.NET Framework

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,11 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Visual Studio archivos temporales y de usuario
+.vs/
+[Bb]in/
+[Oo]bj/
+*.user
+*.suo
+*.sln.docstates
